--- a/angular-ui/src/app/solve/solve.component.html
+++ b/angular-ui/src/app/solve/solve.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <form (ngSubmit)="onSubmit(caseForm)" #caseForm="ngForm">
+  <form (ngSubmit)="onSubmit(caseForm)" #caseForm="ngForm" >
     <div class="form-group row">
       <label for="name" class="col-sm-2 col-form-label">NAME</label>
       <input
@@ -66,7 +66,7 @@
       <button
         type="submit"
         class="btn btn-secondary"
-        [disabled]="!caseForm.form.valid || !submit"
+        [disabled]="formFreeze || !caseForm.form.valid"
       >
         Submit
       </button>
